# mlir-image-compiler

./: .gitignore  CMakeLists.txt  README.md
include/: README.md
include/Image/: CMakeLists.txt  ImageDialect.h  ImageDialect.td  ImageOps.h  ImageOps.td  ImagePasses.h
lib/: README.md
lib/Image/: CMakeLists.txt  ImageDialect.cpp  ImageOps.cpp  ImagePasses.cpp
test/: README.md  test_brighten.mlir
tools/: CMakeLists.txt  README.md
tools/image-opt/: CMakeLists.txt  image-opt.cpp
